--- a/main.html
+++ b/main.html
@@ -3,13 +3,30 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+    <!-- the entire body must be written by student -->
+    <header>
+        <h1>
+            Multiple Choice Questions
+        </h1>
+    </header>
+    <main>
+        <blockquote class="questions">
+            <p>Who was the first female to become the governor of an Indian state?</p>
+        </blockquote>
+        <blockquote class="questions">
+            <p>Who among first Woman to climb Mount Everest twice?</p>
+        </blockquote>
+        <blockquote class="questions">
+            <p>Who is President of India?</p>
+        </blockquote>
+    </main>
+
     <script type="text/javascript" src="./script.js">
-</script>
+    </script>
 
 </body>
 
